# bring_perception_with_ros2

./: LICENCE  README.md
face_recognition/: deploy.py  extract_faces.py  extract_features.py  main.py  one_image_query.py  request.py
tutorial_ws/: .gitignore  README.md
tutorial_ws/launch/: camera_calibration_launch.py  double_pub_sub_launch.py  pub_sub_image_aruco_launch.py  pub_sub_image_aruco_tf_broadcast_launch.py  pub_sub_image_aruco_tf_broadcast_rviz_launch.py  pub_sub_image_launch.py  pub_sub_launch.py  pub_sub_process_image_launch.py  pub_sub_student_launch.py  service_call_launch.py  srv_cli_launch.py
tutorial_ws/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tutorial_ws/launch/log/: latest_build
tutorial_ws/src/image_pipeline/: README.md
tutorial_ws/src/my_interfaces/: CMakeLists.txt  package.xml
tutorial_ws/src/my_interfaces/msg/: Student.msg
tutorial_ws/src/py_cli/: package.xml  setup.cfg  setup.py
tutorial_ws/src/py_cli/py_cli/: client_member_function.py
tutorial_ws/src/py_pub/: package.xml  setup.py
tutorial_ws/src/py_pub/py_pub/: image_publisher_function.py  publisher_tf2_static_broadcaster_function.py  student_publisher_function.py
tutorial_ws/src/py_srv/: package.xml  setup.py
tutorial_ws/src/py_srv/py_srv/: service_member_function.py
tutorial_ws/src/py_sub/: package.xml  setup.cfg  setup.py
tutorial_ws/src/py_sub/py_sub/: features.npy  (+7 more)
tutorial_ws/src/r2d2_urdf/: package.xml  setup.cfg  setup.py
tutorial_ws/src/r2d2_urdf/launch/: demo.launch.py
tutorial_ws/src/r2d2_urdf/urdf/: r2d2.rviz
(+3 files in other folders)
